--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/demo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=rootroot
-spring.jpa.hibernate.ddl-auto=create
